--- a/MessagePosting/Base.lproj/Main.storyboard
+++ b/MessagePosting/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="37t-CT-EJL" kind="show" identifier="select" id="MpM-jF-LYS"/>
+                                    <segue destination="YwK-8a-ZO5" kind="show" identifier="select" id="Ds8-MU-Rbd"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -140,7 +140,45 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="guh-y9-Nqf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="743" y="776"/>
+            <point key="canvasLocation" x="25" y="1168"/>
+        </scene>
+        <!--View Post Table View Controller-->
+        <scene sceneID="pWH-gT-auj">
+            <objects>
+                <tableViewController id="YwK-8a-ZO5" customClass="ViewPostTableViewController" customModule="MessagePosting" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="Y6i-nO-X8a">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PostViewCell" id="5bD-in-jX2">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5bD-in-jX2" id="Snn-Jt-SX5">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommentCell" id="hVN-ig-Kah">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hVN-ig-Kah" id="Wn5-Kw-IQH">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommentEntryCell" id="Rmk-Vl-Dxe">
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Rmk-Vl-Dxe" id="aSL-QT-YPM">
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="YwK-8a-ZO5" id="Coc-i9-dT5"/>
+                            <outlet property="delegate" destination="YwK-8a-ZO5" id="rAv-HQ-aDj"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6hw-Os-ckB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="743" y="736"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="ufY-6N-JvW">
